# rfraction

./: Cargo.toml  README.md
.github/: dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yaml
src/: convertable_to.rs  float_number.rs  fraction.rs  lib.rs  operation_error.rs  sign.rs  unsigned_number.rs
src/fraction/: abs.rs  add.rs  cmp.rs  convertions.rs  div.rs  getters.rs  mod.rs  mul.rs  neg.rs  new.rs  predicates.rs  reverse.rs  sub.rs
tests/: abs.rs  add.rs  convertions.rs  div.rs  errors.rs  mul.rs  neg.rs  new.rs  predicates.rs  reverse.rs  std_traits.rs  sub.rs
